--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="button_login">Login</string>
     <string name="button_back">Back</string>
     <string name="hint_email">E-mail</string>
+    <string name="distance_each_day">Distance each day</string>
 
 </resources>
