--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,9 @@
     <string name="button_update">Update</string>
     <string name="hint_change_height">Change height</string>
     <string name="hint_change_weight">Change weight</string>
+    <string name="button_delete_account">Delete Account</string>
+    <string name="set_notification">Set Notification</string>
+    <string name="change_application_appearance">Change Application Appearance</string>
+    <string name="modify_account">Modify Account</string>
 
 </resources>
