--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,9 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="other">Other</string>
+    <string name="create_notification">Create Notification</string>
+    <string name="hint_pick_date_message">01.01.21</string>
+    <string name="hint_pick_time_message">12:00</string>
+    <string name="pick_time_button">Pick Time</string>
+    <string name="pick_date_button">Pick Date</string>
 </resources>
