At home exercise finish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,24 @@
     <string name="hint_pick_time_message">12:00</string>
     <string name="pick_time_button">Pick Time</string>
     <string name="pick_date_button">Pick Date</string>
+
+
+    <string name="exercise1">Jumping jacks</string>
+    <string name="exercise2">Wall sit</string>
+    <string name="exercise3">Push-up</string>
+    <string name="exercise4">Abdominal crunch</string>
+    <string name="exercise5">Step-up onto chair</string>
+    <string name="exercise6">Squat</string>
+    <string name="exercise7">Triceps dip on chair</string>
+    <string name="exercise8">Plank</string>
+    <string name="exercise9">High knees running in place</string>
+    <string name="exercise10">Lunge</string>
+    <string name="exercise11">Push-up and rotation</string>
+    <string name="exercise12">Side plank</string>
+    <string name="numberOfExercises">10</string>
+
+
+    <string name="summary_calories">Calories : %s</string>
+    <string name="summary_exercisesNumber">Number of exercises : %s</string>
+    <string name="summary_time">Time : %s seconds</string>
 </resources>
