Translated strings to polish

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,2 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="app_name">Aplikacja treningowa</string>
+    <string name="add_training">Dodaj trening</string>
+    <string name="bottom_menu_train">Trenuj</string>
+    <string name="bottom_menu_history">Historia</string>
+    <string name="bottom_menu_statistics">Statystyki</string>
+    <string name="bottom_menu_train_description">Widok treningu</string>
+    <string name="bottom_menu_history_description">Widok treningu historii</string>
+    <string name="bottom_menu_statistics_description">Widok statystyk treningu</string>
+    <string name="stop">Stop</string>
+    <string name="start">Start</string>
+    <string name="training_title">%d. %s</string>
+    <string name="training_distance">Dystans: %.2f km</string>
+    <string name="training_time">Czas: %s</string>
+    <string name="training_avg">Średnia prędkość: %.2f km/s</string>
+    <string name="training_calories">Spalono: %d kalorii.</string>
+    <string name="at_home_training_button">Trening w domu</string>
+    <string name="running_training_button">Trening biegania</string>
+    <string name="hint_username">Nazwa użytkownika</string>
+    <string name="hint_password">Hasło</string>
+    <string name="button_register_message">Nie masz konta? Zarejestruj się.</string>
+    <string name="button_register">Zarejestruj się</string>
+    <string name="button_login">Zaloguj</string>
+    <string name="button_back">Wróć</string>
+    <string name="hint_email">E-mail</string>
+    <string name="hint_weight">Waga</string>
+    <string name="hint_height">Wzrost</string>
+    <string name="distance_each_day">Dystans przebyty każdego dnia</string>
+    <string name="hint_change_username">Zmień nazwę użytkownika</string>
+    <string name="hint_change_email">Zmień E-mail</string>
+    <string name="hint_old_password">Stare hasło</string>
+    <string name="hint_new_password">Nowe hasło</string>
+    <string name="button_update">Zaktualizuj</string>
+    <string name="hint_change_height">Zmień wzrost</string>
+    <string name="hint_change_weight">Zmień wagę</string>
+    <string name="button_delete_account">Usuń konto</string>
+    <string name="create_reminder">Stwórz przypomnienie</string>
+    <string name="change_application_appearance">Zmień wygląd aplikacji</string>
+    <string name="modify_account">Modyfikuj konto</string>
+    <string name="label_sex">Płeć</string>
+    <string name="male">Mężczyzna</string>
+    <string name="female">Kobieta</string>
+    <string name="other">Inna</string>
+    <string name="create_notification">Stwórz przypomnienie</string>
+    <string name="hint_pick_date_message">01.01.21</string>
+    <string name="hint_pick_time_message">12:00</string>
+    <string name="pick_time_button">Wybierz godzinę</string>
+    <string name="pick_date_button">Wybierz datę</string>
+    <string name="exercise1">Pajacyki</string>
+    <string name="exercise2">Krzesełko</string>
+    <string name="exercise3">Pompki</string>
+    <string name="exercise4">Brzuszki</string>
+    <string name="exercise5">Wchodzenie na krzesło</string>
+    <string name="exercise6">Przysiady</string>
+    <string name="exercise7">ćwiczenia rąk z krzesłem</string>
+    <string name="exercise8">Deska</string>
+    <string name="exercise9">Bieg w miejscu</string>
+    <string name="exercise10">Klękanie</string>
+    <string name="exercise11">Pompka z obrotem</string>
+    <string name="exercise12">Deska na boku</string>
+    <string name="numberOfExercises">10</string>
+    <string name="summary_calories">Kalorie : %s</string>
+    <string name="summary_exercisesNumber">Ilość wykonanych ćwiczeń : %s</string>
+    <string name="summary_time">Czas : %s sekund</string>
+    <string name="failed_register">Nie udało się zarejestrować</string>
+    <string name="failed_login">Nie udało się zalogować</string>
+    <string name="failed_modify">Nie udało się zmodyfikować</string>
+    <string name="failed_delete">Nie udało się usunąć</string>
+</resources>
