--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -67,4 +67,5 @@
     <string name="failed_login">Nie udało się zalogować</string>
     <string name="failed_modify">Nie udało się zmodyfikować</string>
     <string name="failed_delete">Nie udało się usunąć</string>
+    <string name="language">PL</string>
 </resources>
