--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,9 +59,9 @@
     <string name="exercise11">Push-up and rotation</string>
     <string name="exercise12">Side plank</string>
     <string name="numberOfExercises">10</string>
-    <string name="summary_calories">Calories : %s</string>
-    <string name="summary_exercisesNumber">Number of exercises : %s</string>
-    <string name="summary_time">Time : %s seconds</string>
+    <string name="summary_calories">Calories : \n %s</string>
+    <string name="summary_exercisesNumber">Number of exercises : \n %s</string>
+    <string name="summary_time">Time : \n %s seconds</string>
     <string name="failed_register">Failed to register</string>
     <string name="failed_login">Failed to login</string>
     <string name="failed_modify">Failed to modify</string>
@@ -74,4 +74,10 @@
     <string name="alarm_notification">Time for run!</string>
     <string name="running">RUNNING</string>
     <string name="admin_mess">Message from admin</string>
+    <string name="your_bmi">Your BMI</string>
+    <string name="logo">Logo</string>
+    <string name="next">Next</string>
+    <string name="end">End</string>
+    <string name="default_date">01.01.2021</string>
+    <string name="repeats">Repeats:</string>
 </resources>
