--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,7 @@
     <string name="end">End</string>
     <string name="default_date">01.01.2021</string>
     <string name="repeats">Repeats:</string>
+    <string name="zero_timer">00:00:00</string>
+    <string name="zero_distance">0.0 km</string>
+    <string name="zero_cal">0 kcal</string>
 </resources>
