--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -7,7 +7,6 @@
     <string name="bottom_menu_statistics">Statystyki</string>
     <string name="bottom_menu_train_description">Widok treningu</string>
     <string name="bottom_menu_history_description">Widok treningu historii</string>
-    <string name="bottom_menu_statistics_description">Widok statystyk treningu</string>
     <string name="stop">Stop</string>
     <string name="start">Start</string>
     <string name="training_start">Początek: %s</string>
@@ -17,7 +16,6 @@
     <string name="training_duration">Czas: %s</string>
     <string name="training_avg">Średnia prędkość: %.2f km/s</string>
     <string name="training_calories">Spalono: %d kalorii.</string>
-    <string name="at_home_training_button">Trening w domu</string>
     <string name="running_training_button">Trening biegania</string>
     <string name="hint_username">Nazwa użytkownika</string>
     <string name="hint_password">Hasło</string>
@@ -31,8 +29,6 @@
     <string name="distance_each_day">Dystans przebyty każdego dnia</string>
     <string name="hint_change_username">Zmień nazwę użytkownika</string>
     <string name="hint_change_email">Zmień E-mail</string>
-    <string name="hint_old_password">Stare hasło</string>
-    <string name="hint_new_password">Nowe hasło</string>
     <string name="button_update">Zaktualizuj</string>
     <string name="hint_change_height">Zmień wzrost</string>
     <string name="hint_change_weight">Zmień wagę</string>
@@ -49,19 +45,6 @@
     <string name="hint_pick_time_message">12:00</string>
     <string name="pick_time_button">Wybierz godzinę</string>
     <string name="pick_date_button">Wybierz datę</string>
-    <string name="exercise1">Pajacyki</string>
-    <string name="exercise2">Krzesełko</string>
-    <string name="exercise3">Pompki</string>
-    <string name="exercise4">Brzuszki</string>
-    <string name="exercise5">Wchodzenie na krzesło</string>
-    <string name="exercise6">Przysiady</string>
-    <string name="exercise7">ćwiczenia rąk z krzesłem</string>
-    <string name="exercise8">Deska</string>
-    <string name="exercise9">Bieg w miejscu</string>
-    <string name="exercise10">Klękanie</string>
-    <string name="exercise11">Pompka z obrotem</string>
-    <string name="exercise12">Deska na boku</string>
-    <string name="numberOfExercises">10</string>
     <string name="summary_calories">Kalorie : \n %s</string>
     <string name="summary_exercisesNumber">Ilość wykonanych ćwiczeń : \n %s</string>
     <string name="summary_time">Czas : \n %s sekund</string>
@@ -86,4 +69,7 @@
     <string name="zero_timer">00:00:00</string>
     <string name="zero_distance">0.0 km</string>
     <string name="zero_cal">0 kcal</string>
+    <string name="hint_birthday">Urodziny</string>
+    <string name="change_birthday">Zmień datę urodzenia</string>
+    <string name="change_sex">Zmień płeć</string>
 </resources>
