--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -72,4 +72,5 @@
     <string name="hint_birthday">Urodziny</string>
     <string name="change_birthday">Zmień datę urodzenia</string>
     <string name="change_sex">Zmień płeć</string>
+    <string name="logout">Wyloguj</string>
 </resources>
