--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,8 +68,8 @@
     <string name="zero_timer">00:00:00</string>
     <string name="zero_distance">0.0 km</string>
     <string name="zero_cal">0 kcal</string>
-    <string name="google_maps_api_key" translatable="false">AIzaSyCx_3la3ryFDCoYNzXKcSEQMlAw3QYwdRM</string>
     <string name="hint_birthday">Birthday</string>
     <string name="change_birthday">Change birthday</string>
+    <string name="logout">Logout</string>
     <string name="change_sex">Change sex</string>
 </resources>
